fix: reduce right margin of header menu for improved spacing, resolves #186

--- a/blowcomotion/static/scss/_header.scss
+++ b/blowcomotion/static/scss/_header.scss
@@ -36,7 +36,7 @@
 .header__menu {
     padding: 31px 0 27px;
     display: inline-block;
-    margin-right: 45px;
+    margin-right: 25px;
 
     span {
         color: $white-color;
